--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
   "ConfigName": "Config Name From App Setting Development",
+  "AllowedOrigins": "http://172.0.0.1:5500/",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
