--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConfigName": "Config Name From App Setting Production",
+  "AllowedOrigins": "http://172.0.0.1:5500/",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
