add Db Connection Strings

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ConfigName": "Config Name From App Setting Production",
   "AllowedOrigins": "http://172.0.0.1:5500/",
+  "ConnectionStrings": {
+    "DBConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=API_Movies_DB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
