Update appsettings.json to include AllowedHosts and AllowedOrigins for improved CORS configuration.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
+  "AllowedHosts": "*",
+  "AllowedOrigins": "*",
   "ConfigName": "Config Name From App Setting Production",
-  "AllowedOrigins": "http://172.0.0.1:5500/",
   "ConnectionStrings": {
     "DBConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=API_Movies_DB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
@@ -9,6 +10,5 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
